--- a/config.json
+++ b/config.json
@@ -7,8 +7,8 @@
             "disabled": 0
         },
         {
-            "name": "NA-LUCKPOOL",
-            "url": "stratum+tcp://na.luckpool.net:3956",
+            "name": "VIPOR",
+            "url": "stratum+tcp://sg.vipor.net:5040",
             "timeout": 180,
             "disabled": 1
         },
@@ -23,7 +23,7 @@
     "pass": "X",
     "algo": "verus",
     "threads": 8,
-    "cpu-priority": 2,
+    "cpu-priority": 1,
     "cpu-affinity": -1,
     "retry-pause": 10,
     "api-allow": "192.168.0.0/16",
